--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
     --indent: 30px;
     --item: 4;
     --anim-fast: 250ms;
+    --transition-func: cubic-bezier(0.4, 0, 0.2, 1);
 }
 body{
     font-family: 'Roboto', sans-serif;
@@ -19,7 +20,6 @@ body{
     letter-spacing: 0.03em;
     color: var(--primary-text-color);
     margin: 0 auto;
-    width: 1600px;
 }
 /* Частковий ресет */
 h1, h2, h3, h4, h5, h6, p{
@@ -85,7 +85,6 @@ img{
 .link{
     color: currentColor;
     text-decoration: none;
-    transition: color, var(--anim-fast) cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header{
     font-weight: 500;
@@ -96,6 +95,7 @@ img{
     display: flex;
     padding: 32px 0;
     align-items: center;
+    transition: color, var(--anim-fast) var(--transition-func);
 }
 .header-link:hover,
 .header-link:focus {
@@ -225,10 +225,9 @@ img{
     font-weight: 700;
     line-height: calc(16/14);
     text-align: center;
-    padding-top: 27px;
-    padding-bottom: 27px;
+    padding: 27px;
     width: 100%;
-    color: #FFFFFF;
+    color: var(--text-color-white);
     background-color: rgba(47, 48, 58, 0.8);
     text-transform: uppercase;
 }
@@ -261,7 +260,6 @@ img{
 }
 /* Footer */
 .footer{
-    display: flex;
     background-color: var(--backgraund-color-dark);
     padding-top: 60px;
     padding-bottom: 60px;
@@ -277,6 +275,7 @@ img{
 }
 .footer-link{
     margin-bottom: 9px;
+    transition: var(--anim-fast) var(--transition-func);
 }
 .footer-link:hover,
 .footer-link:focus{
@@ -324,9 +323,9 @@ img{
     border-radius: 4px;
     padding: 6px 22px;
     display: block;
-    transition: color var(--anim-fast) cubic-bezier(0.4, 0, 0.2, 1),
-    background-color var(--anim-fast) cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow var(--anim-fast) cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color var(--anim-fast) var(--transition-func),
+    background-color var(--anim-fast) var(var(--transition-func)),
+    box-shadow var(--anim-fast) var(--transition-func);
 }   
 .filter-btn:hover,
 .filter-btn:focus{
@@ -388,14 +387,15 @@ img{
     overflow: hidden;
     padding: 63px 24px;
     background-color: rgba(33, 150, 243, 0.9);
-    transition: transform var(--anim-fast) cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform var(--anim-fast) var(--transition-func);
 }
 .overlay-descr{
     font-size: 18px; 
     line-height: 1.56;
-    color: #FFFFFF;
+    color: var(--text-color-white);
 }
-.portfolio-item:hover .overlay{
+.portfolio-link:hover .overlay,
+.portfolio-link:focus .overlay{
     transform: translateY(0);
 }
 /* Contacts-icon */
@@ -429,10 +429,11 @@ img{
     border-radius: 50%;
     align-items: center;
     justify-content: center;
+    transition: background-color var(--anim-fast) var(--transition-func);
 }
 .social-icon{
     fill: var(--icon-color-grey);
-    transition: fill, var(--anim-fast) cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill var(--anim-fast) var(--transition-func);
 }
 .social-link:hover,
 .social-link:focus{
@@ -474,6 +475,8 @@ img{
     border: 1px solid var(--icon-color-grey);
     border-radius: 4px;
     fill: var(--icon-color-grey);
+    transition: fill var(--anim-fast) var(--transition-func),
+    border var(--anim-fast) var(--transition-func);
 }
 .clients-link:hover,
 .clients-link:focus{
@@ -491,13 +494,16 @@ img{
     opacity: 1;
     visibility: visible;
     pointer-events: initial;
-    transition: opacity var(--anim-fast) cubic-bezier(0.4, 0, 0.2, 1),
-    visibility var(--anim-fast) cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity var(--anim-fast) var(--transition-func),
+    visibility var(--anim-fast) var(--transition-func);
 }
 .backdrop.is-hidden {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+}
+.backdrop.is-hidden .modal{
+    transform: translate(-50%, -50%) scale(0) rotate(90deg);
 }
 .modal{
     width: 528px;
@@ -508,6 +514,7 @@ img{
     top: 50%;
     left: 50%;
     transform: translate(-50%,  -50%);
+    transition: transform var(--anim-fast) var(--transition-func);
 }
 .modal-close{
     position: absolute;
